# AMQP-restapi

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
restapi/: CustomFastAPI.py  __main__.py  main.py
restapi/routes/: __init__.py  rpc.py
restapi/rpc/: RPCClient.py  RPCResponse.py  __init__.py
